--- a/send-order-emails/package.json
+++ b/send-order-emails/package.json
@@ -1,16 +1,23 @@
 {
   "name": "send-order-emails",
   "version": "1.0.0",
-  "description": "Cloud Function to send order emails using SendGrid",
   "main": "index.js",
   "type": "commonjs",
   "engines": {
     "node": "20"
   },
   "dependencies": {
-    "@sendgrid/mail": "^8.1.6"
+    "@sendgrid/mail": "^8.1.6",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^4.18.2",
+    "firebase": "^12.6.0",
+    "firebase-admin": "^13.6.0",
+    "firebase-functions": "^7.0.1",
+    "functions": "^1.0.9"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "lint": "eslint ."
   }
 }
