Ignore .env și serviceAccountKey.json

--- a/send-order-emails/.gitignore
+++ b/send-order-emails/.gitignore
@@ -64,6 +64,9 @@ node_modules/
 
 # dotenv environment variables file
 .env
-
+send-order-emails/serviceAccountKey.json
 # dataconnect generated files
 .dataconnect
+
+
+
